update multimediaupdate sketches update hamlet spacing

--- a/digi.html
+++ b/digi.html
@@ -27,7 +27,9 @@
       #nav {  font-family: Georgia, Times, Serif;
               font-weight: normal;
               color: #777;
-              border-bottom: 1px solid #777;}
+              border-bottom: 1px solid #777;
+
+            }
       #nav:hover {color: #000;
                   border-bottom: 1px solid #000;}
       img { padding-bottom: 10px;
@@ -35,7 +37,7 @@
             -webkit-filter: brightness(99%);
           }
       .btn {font-weight: bold;}
-      #more { text-decoration: none; font-style: italic;}
+      #more { text-decoration: underline; font-style: italic;}
       #more:hover {text-decoration: none; border-bottom: 1px solid #000;}
       #left-bar {text-align: center;}
     </style>
