--- a/divine.html
+++ b/divine.html
@@ -35,7 +35,7 @@
           -webkit-filter: brightness(99%);
         }
     .btn {font-weight: bold;}
-    #more { text-decoration: none; font-style: italic;}
+    #more { text-decoration: underline; font-style: italic;}
     #more:hover {text-decoration: none; border-bottom: 1px solid #000;}
     #left-bar {text-align: center;}
     </style>
