--- a/hamlet.html
+++ b/hamlet.html
@@ -40,14 +40,14 @@
             -webkit-filter: brightness(99%);
           }
       .btn {font-weight: bold;}
-      #more { text-decoration: none; font-style: italic;}
+      #more { text-decoration: underline; font-style: italic;}
       #more:hover {text-decoration: none; border-bottom: 1px solid #000;}
       #left-bar {text-align: center;}
     </style>
     <style>
 
       body{
-        padding: 20px;
+        padding: 0px;
         margin:0;
       }
       #text {
@@ -123,7 +123,7 @@
 
             <div style="text-align: center;">
               <a href="index.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
-              <a href="digi.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
+              <a href="archi.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
 
           </div>
@@ -142,7 +142,7 @@
 
             <p>I was curious about the words that Shakespeare used in the mid-range, not to common and not to eccentric. What were the words Shakespeare used commonly through out his stories? Could be a topic that I might involve myself for the rest of the half semester. Not only him but for any writer. The width of the canvas is the length of the book from beginning to end. The location of the ellipses are the initial appearance of the word itself. The size is correlates to the number of times the word has appeared throughout the story. Most of his single to twenty appearance words newly appear all through out the book, while the words he uses the most he shows them off right at the beginning ( like the, as, and those type of words/pronouns). Meaning throughout the book Shakepeare introduces new words until the end. That is a writer with creativity.</p>
 
-            <p>A side project I did while studying shakespeare, a shakepeare bot! Now inactive, but still checkout it's eloquent dialogues mix matching his works together. <a href="https://twitter.com/Shakespearbot">https://twitter.com/Shakespearbot</a></p>
+            <p>A side project I did while studying shakespeare, a shakepeare bot! Now inactive, but still checkout it's eloquent dialogues mix matching his works together. <span id="more"><a href="https://twitter.com/Shakespearbot">https://twitter.com/Shakespearbot</a></span></p>
 
             <hr>
             <!-- project image -->
