--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ He will take great delight in you;
             </div>
             <!-- ONE -->
             <!-- project title -->
-            <h5><em><a class="link" href="data_analysis.html">YOUTH CRIMES AND SCHOLASTIC APTITUDE TEST</a></em></h5>
+            <h5><em><a class="link" href="data_analysis.html">YOUTH CRIMES AND DATA ANALYSIS</a></em></h5>
             <!-- project image -->
             <div class="image">
               <a href="data_analysis.html"><img src="image/data_0A.png" class="img-responsive img-circle"></a>
@@ -245,14 +245,14 @@ He will take great delight in you;
             </div>
             <!-- ONE -->
             <!-- project title -->
-            <h5><em><a class="link" href="http://www.vimeo.com/crzikrn">MEDIA TEST LAB</a></em></h5>
+            <h5><em><a class="link" href="videolab.html">MEDIA TEST LAB</a></em></h5>
             <!-- project image -->
             <div class="image">
-              <a href="http://www.vimeo.com/crzikrn"><img src="image/lab_00.png" class="img-responsive img-circle"></a>
+              <a href="videolab.html"><img src="image/lab_00.png" class="img-responsive img-circle"></a>
               <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
             </div>
             <!-- description -->
-            <p>Collection of video test uploads in coding.<span id="more"><a href="http://www.vimeo.com/crzikrn"> More>></a></span></p>
+            <p>Collection of video uploads in coding/motion graphics /tests.<span id="more"><a href="videolab.html"> More>></a></span></p>
             <!-- button -->
             <div class="more button">
 
@@ -260,7 +260,19 @@ He will take great delight in you;
             <!-- break -->
             <br>
             <hr>
-
+            <!-- TWO -->
+            <!-- project title -->
+            <h5><em><a class="link" href="carni.html">SKETCHES</a></em></h5>
+            <!-- project image -->
+            <div class="image">
+              <a href="sketches.html"><img src="image/sketch_des_05.jpg" class="img-responsive img-circle"></a>
+              <!-- <a href=""><img src="image/carni_01.png" class="img-responsive img-circle"></a> -->
+            </div>
+            <!-- description -->
+            <p>Design sketch iterations and ideas sketches on notebooks. <span id="more"><a href="sketches.html">More>></a></span></p>
+            <!-- button -->
+            <div class="more button">
+            </div>
 
         </div> <!--  END OF PORTFOLIO ROW-->
       </div> <!--  END OF CONTENT MAIN PART -->
