--- a/sketches.html
+++ b/sketches.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/lightbox.min.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
     <script src=""></script>
+
     <title>BYUNNNN</title>
     <!-- ADDING CUSTOM CSS STYLE -->
     <style>
@@ -85,7 +86,7 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>CODING <a href="index.html"><</a> </h4>
+              <h4>MULTIMEDIA <a href="index.html"><</a> </h4>
               <hr>
               <h3></h3>
             </div>
@@ -94,49 +95,57 @@
 
             <!-- project image -->
             <div class="image">
-              <a href=""><img src="image/graf_00.jpg" class="img-responsive img-circle"></a>
+              <a href=""><img src="image/sketch_des_05.jpg" class="img-responsive img-circle"></a>
             </div>
             <!-- date description -->
             <p id="left-bar" style="font-family: 'Open Sans';">
-            <b>Architectural Graffiti</b><br>
-            ITP, NYU<br>
-            New York, NY<br>
-            2014</p>
+            <b>Sketches</b>
+            <br>New York, NY
+            <br>2014-</p>
 
             <div style="text-align: center;">
-              <a href="hamlet.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
-              <a href="digi.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
+              <a href="carni.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="about.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
-
           </div>
 
           <!--  NEWS STRIP 2-->
           <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12">
             <!-- category title -->
             <div class="category title">
-              <h4>ARCHITECTURAL GRAFFITI</h4>
+              <h4>SKETCHES</h4>
               <hr>
               <h3></h3>
             </div>
             <!-- ONE -->
             <!-- project description -->
-            <p>Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design.</p>
+            <p>Design sketch iterations and idea sketches. </p>
 
-            <p>Used processing to mine xml graffiti data list to render in real-time and camera 3d movements to keep handlers in check. The rendering of 3D.</p>
             <hr>
             <!-- project image -->
             <div class="image">
+              <h4>Portfolio UI Sketches</h4>
+              <hr>
               <div class="col-md-6">
-                <a href="image/graf_02.jpg" data-lightbox="graf-box"><img src="image/graf_02.jpg" class="img-responsive img-circle"></a>
-                <a href="image/graf_03.jpg" data-lightbox="graf-box"><img src="image/graf_03.jpg" class="img-responsive img-circle"></a>
-                <a href="image/graf_04.png" data-lightbox="graf-box"><img src="image/graf_04.png" class="img-responsive img-circle"></a>
-                <a href="image/graf_00.jpg" data-lightbox="graf-box"><img src="image/graf_00.jpg" class="img-responsive img-circle"></a>
-              </div>
-              <div class="col-md-6">
-                <a href="image/graf_01.jpg" data-lightbox="graf-box"><img src="image/graf_01.jpg" class="img-responsive"></a>
-
+                <a href="image/sketch_des_00.jpg" data-lightbox="typo-box" data-title="Portfolio sketch 1">
+                  <img src="image/sketch_des_00.jpg" class="img-responsive"></a>
+                <a href="image/sketch_des_02.jpg" data-lightbox="typo-box" data-title="Portfolio sketch 2">
+                  <img src="image/sketch_des_02.jpg" class="img-responsive"></a>
               </div>
 
+              <div class="col-md-6">
+                <a href="image/sketch_des_01.jpg" data-lightbox="typo-box" data-title="Portfolio sketch 3">
+                  <img src="image/sketch_des_01.jpg" class="img-responsive"></a>
+                <a href="image/sketch_des_04.jpg" data-lightbox="typo-box" data-title="Portfolio sketch 4">
+                  <img src="image/sketch_des_04.jpg" class="img-responsive"></a>
+              </div>
+              <br>
+              <h4>Ideas Sketches</h4>
+              <hr>
+              <div class="col-md-6">
+              <a href="image/sketch_des_03.jpg" data-lightbox="typo-box" data-title="Weather sketch 1">
+                <img src="image/sketch_des_03.jpg" class="img-responsive"></a>
+              </div>
 
             </div>
             <!-- project description -->
