--- a/carni.html
+++ b/carni.html
@@ -35,7 +35,7 @@
             -webkit-filter: brightness(99%);
           }
       .btn {font-weight: bold;}
-      #more { text-decoration: none; font-style: italic;}
+      #more { text-decoration: underline; font-style: italic;}
       #more:hover {text-decoration: none; border-bottom: 1px solid #000;}
       #left-bar {text-align: center;}
     </style>
@@ -105,7 +105,7 @@
 
             <div style="text-align: center;">
               <a href="data_analysis.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
-              <a href="about.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
+              <a href="sketches.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
 
           </div>
