--- a/data_analysis.html
+++ b/data_analysis.html
@@ -35,7 +35,7 @@
             -webkit-filter: brightness(99%);
           }
       .btn {font-weight: bold;}
-      #more { text-decoration: none; font-style: italic;}
+      #more { text-decoration: underline; font-style: italic;}
       #more:hover {text-decoration: none; border-bottom: 1px solid #000;}
       #left-bar {text-align: center;}
     </style>
@@ -114,7 +114,7 @@
           <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12">
             <!-- category title -->
             <div class="category title">
-              <h4>YOUTH CRIMES AND SCHOLASTIC APTITTUDE TESTS</h4>
+              <h4>YOUTH CRIMES AND DATA ANALYSIS</h4>
               <hr>
               <h3></h3>
             </div>
