changing few links

--- a/carni.html
+++ b/carni.html
@@ -105,7 +105,7 @@
 
             <div style="text-align: center;">
               <a href="data_analysis.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
-              <a href="sketches.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
+              <a href="videolab.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
 
           </div>
