--- a/sketches.html
+++ b/sketches.html
@@ -104,7 +104,7 @@
             <br>2014-</p>
 
             <div style="text-align: center;">
-              <a href="carni.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="videolab.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
               <a href="about.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
           </div>
