--- a/videolab.html
+++ b/videolab.html
@@ -104,8 +104,8 @@
             2011-</p>
 
             <div style="text-align: center;">
-              <a href="hamlet.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
-              <a href="digi.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
+              <a href="carni.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="sketches.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
 
           </div>
