--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ He will take great delight in you;
           <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12">
             <!-- category title -->
             <div class="category title">
-              <h4>CRITIQUE</h4>
+              <h4>HACKING JOURNALISM</h4>
               <hr>
               <h3></h3>
             </div>
