--- a/videolab.html
+++ b/videolab.html
@@ -134,25 +134,24 @@
                 <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/93921664?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0" width="480" height="281" frameborder="0" title="Stuff that Sounds like Autumn" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 </div>
+                <!-- Popping Graphic -->
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/41617950?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0" width="480" height="281" frameborder="0" title="Stuff that Sounds like Autumn" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
                 <!-- graffiti -->
                 <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/79151799?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0" width="480" height="281" frameborder="0" title="Stuff that Sounds like Autumn" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 </div>
-                <!-- Popping Graphic -->
-                <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/41617951?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0" width="480" height="281" frameborder="0" title="Stuff that Sounds like Autumn" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                </div>
-
               </div>
 
               <div class="col-md-4">
-                <!-- floating paper -->
-                <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/77011929?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0" width="480" height="281" frameborder="0" title="Stuff that Sounds like Autumn" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                </div>
                 <!-- subway random city -->
                 <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/76240312?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0" width="480" height="281" frameborder="0" title="Stuff that Sounds like Autumn" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+                <!-- floating paper mirror color-->
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/78037482?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0" width="480" height="281" frameborder="0" title="Stuff that Sounds like Autumn" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 </div>
                 <!-- data code alive  -->
                 <div class="embed-responsive embed-responsive-16by9">
@@ -173,18 +172,15 @@
                 <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/87328695?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0" width="480" height="281" frameborder="0" title="Stuff that Sounds like Autumn" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 </div>
-                <!-- corea+tal -->
-                <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/41793446?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0" width="480" height="281" frameborder="0" title="Stuff that Sounds like Autumn" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                </div>
                 <!-- gesture drawing test -->
                 <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/30004346?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0" width="480" height="281" frameborder="0" title="Stuff that Sounds like Autumn" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 </div>
+                <!-- corea+tal -->
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/41793446?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0" width="480" height="281" frameborder="0" title="Stuff that Sounds like Autumn" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
               </div>
-
-
-
             </div>
             <!-- project description -->
 
