--- a/hamlet.html
+++ b/hamlet.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="js/p5.min.js"></script>
     <script type="text/javascript" src="js/p5.dom.js"></script>
     <script type="text/javascript" src="sketch.js"></script>
+    <script type="text/javascript" src="sketch1.js"></script>
     <!-- <script language="javascript" type="text/javascript" src="js/dropzone.js"></script> -->
 
 
@@ -154,7 +155,11 @@
             </div>
             <!-- project description -->
             <h5><em> Drag the mouse to change size of ellipse.</em></h5>
+            <h5><strong>Hamlet</strong></h5>
             <div id="text"></div>
+            <br>
+            <h5><strong>King Lear</strong></h5>
+            <div id="kinglear"></div>
             <br>
             <p><em>List of first 12 words</em></p>
             <div id="token"></div>
