--- a/hamlet.html
+++ b/hamlet.html
@@ -117,7 +117,7 @@
             </div>
             <!-- date description -->
             <p id="left-bar" style="font-family: 'Open Sans';">
-            <b>Hamlet, Text Analysis</b><br>
+            <b>Shakespeare, Text Analysis</b><br>
             ITP, NYU<br>
             New York, NY<br>
             2014</p>
@@ -133,13 +133,13 @@
           <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12">
             <!-- category title -->
             <div class="category title">
-              <h4>HAMLET, TEXT ANALYSIS</h4>
+              <h4>SHAKESPEARE'S CREATIVITY, TEXT ANALYSIS</h4>
               <hr>
               <h3></h3>
             </div>
             <!-- ONE -->
             <!-- project description -->
-            <p>Understanding of the words Shakepeare uses. Hamlet text analysis to understand Shakespeare's creativity.</p>
+            <p>Understanding the creativity of Shakespeare through the words he uses. Featuring data graph of Hamlet & King Lear text analysis.</p>
 
             <p>I was curious about the words that Shakespeare used in the mid-range, not to common and not to eccentric. What were the words Shakespeare used commonly through out his stories? Could be a topic that I might involve myself for the rest of the half semester. Not only him but for any writer. The width of the canvas is the length of the book from beginning to end. The location of the ellipses are the initial appearance of the word itself. The size is correlates to the number of times the word has appeared throughout the story. Most of his single to twenty appearance words newly appear all through out the book, while the words he uses the most he shows them off right at the beginning ( like the, as, and those type of words/pronouns). Meaning throughout the book Shakepeare introduces new words until the end. That is a writer with creativity.</p>
 
