--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@ He will take great delight in you;
             </div>
             <!-- ONE -->
             <!-- project title -->
-            <h5><em><a class="link" href="hamlet.html">HAMLET, TEXT ANALYSIS</a></em></h5>
+            <h5><em><a class="link" href="hamlet.html">SHAKESPEARE, TEXT ANALYSIS</a></em></h5>
             <!-- project image -->
             <div class="image">
               <a href="hamlet.html"><img src="image/hamlet_00.png" class="img-responsive img-circle"></a>
               <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
             </div>
             <!-- description -->
-            <p>Understanding of the words Shakepeare uses. Hamlet text analysis to understand Shakespeare's creativity.<span id="more"><a href="divine.html"> More>></a></span></p>
+            <p>Understanding the creativity of Shakespeare through the words he uses. Featuring data graph of his works' text analysis.<span id="more"><a href="divine.html"> More>></a></span></p>
             <!-- button -->
             <div class="more button">
 
@@ -277,7 +277,7 @@ He will take great delight in you;
 
         </div> <!--  END OF PORTFOLIO ROW-->
       </div> <!--  END OF CONTENT MAIN PART -->
-    
+
       <!--  FOOTER -->
       <div class="container footer">
         <div class="footer text box">
