--- a/data_analysis.html
+++ b/data_analysis.html
@@ -85,7 +85,7 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>CRITIQUE <a href="index.html"><</a> </h4>
+              <h4>HACKING JOURNALISM <a href="index.html"><</a> </h4>
               <hr>
               <h3></h3>
             </div>
@@ -104,8 +104,8 @@
             2014</p>
 
             <div style="text-align: center;">
-              <a href="divine.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
-              <a href="carni.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
+              <a href="archi.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="listening.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
 
           </div>
