--- a/divine.html
+++ b/divine.html
@@ -85,7 +85,7 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>MEDIA DESIGN <a href="index.html"><</a> </h4>
+              <h4>INSTALLATION/FABRICATION <a href="index.html"><</a> </h4>
               <hr>
               <h3></h3>
             </div>
