--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ He will take great delight in you;
                   border-bottom: 1px solid #000;}
       img { padding-bottom: 10px;
             /*-webkit-filter: grayscale(50%);*/
-            -webkit-filter: brightness(99%);
+            -webkit-filter: brightness(60%);
           }
       img:hover{
-        -webkit-filter: brightness(50%);
+        -webkit-filter: brightness(99%);
       }
       .btn {font-weight: bold;}
       #more { text-decoration: none; font-weight: bold;}
@@ -109,12 +109,27 @@ He will take great delight in you;
           <!--  NEWS STRIP 1-->
           <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12">
             <!-- category title -->
-            <div class="category title" style="">
+            <div class="category title">
               <h4>CODING</h4>
               <hr>
               <h3></h3>
             </div>
+
             <!-- ONE -->
+            <!-- project title -->
+            <h5><em><a class="link" href="digi.html">REPRESENTATIONS OF US</a></em></h5>
+            <!-- project image -->
+            <div class="image">
+              <a href="digi.html"><img src="image/dian_03.png" class="img-responsive img-circle"></a>
+            </div>
+            <!-- description -->
+            <p>The juxtaposition of analog and digital expressions on a digital canvas. Usage of facedetection and pixel brightness to simulate expressionism. <span id="more"><a href="digi.html">More>></a></span></p>
+            <!-- button -->
+            <div class="more button"></div>
+            <!-- break -->
+            <br>
+            <hr>
+            <!-- TWO -->
             <!-- project title -->
             <h5><em><a class="link" href="hamlet.html">SHAKESPEARE, TEXT ANALYSIS</a></em></h5>
             <!-- project image -->
@@ -125,13 +140,11 @@ He will take great delight in you;
             <!-- description -->
             <p>Understanding the creativity of Shakespeare through the words he uses. Featuring data graph of his works' text analysis.<span id="more"><a href="divine.html"> More>></a></span></p>
             <!-- button -->
-            <div class="more button">
-
-            </div>
+            <div class="more button"></div>
             <!-- break -->
             <br>
             <hr>
-            <!-- TWO -->
+            <!-- THREE -->
             <!-- project title -->
             <h5><em><a class="link" href="archi.html"> ARCHITECTURAL GRAFFITI</a></em></h5>
             <!-- project image -->
@@ -143,60 +156,9 @@ He will take great delight in you;
             <!-- button -->
             <div class="more button"></div>
 
-            <br>
-            <hr>
-            <!-- THREE -->
-            <!-- project title -->
-            <h5><em><a class="link" href="digi.html">DIGITAL ANALOG REPRESENTATIONS OF US</a></em></h5>
-            <!-- project image -->
-            <div class="image">
-              <a href="digi.html"><img src="image/dian_03.png" class="img-responsive img-circle"></a>
-            </div>
-            <!-- description -->
-            <p>The juxtaposition of analog and digital expressions on a digital canvas. Usage of facedetection and pixel brightness to simulate paintings in the style of expressionism. <span id="more"><a href="digi.html">More>></a></span></p>
-            <!-- button -->
-            <div class="more button"></div>
-
           </div>
 
-          <!--  NEWS STRIP 2-->
-          <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12">
-            <!-- category title -->
-            <div class="category title">
-              <h4>MEDIA DESIGN</h4>
-              <hr>
-              <h3></h3>
-            </div>
-            <!-- ONE -->
-            <!-- project title -->
-            <h5><em><a class="link" href="typo.html">TYPOGRAPHY</a></em></h5>
-            <!-- project image -->
-            <div class="image">
-              <a href="typo.html"><img src="image/typo_00.jpg" class="img-responsive img-circle"></a>
-            </div>
-            <!-- project description -->
-            <p>Personal typography projects over the years for different media platforms. Branding, Books, Posters, Slides. <br><span id="more"><a href="typo.html">More>></a></span></p>
-            <div class="more button">
-
-            </div>
-            <!-- break -->
-            <br>
-            <hr>
-            <!-- TWO -->
-            <!-- project title -->
-            <h5><em><a class="link" href="divine.html">MEDIA ART ON THE DIVINE</a></em></h5>
-            <!-- project image -->
-            <div class="image">
-              <a href="divine.html"><img src="image/mapp_00.jpg" class="img-responsive img-circle"></a>
-            </div>
-            <!-- project description -->
-            <p>Projection Mapping on a Religious Object; re-creating the death on cross and overlaying study sketches of the object. <span id="more"><a href="divine.html">More>></a></span></p>
-            <div class="more button">
-
-            </div>
-          </div>
-
-          <!--  NEWS STRIP 3 -->
+          <!--  NEWS STRIP 2 -->
           <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12">
             <!-- category title -->
             <div class="category title">
@@ -204,9 +166,10 @@ He will take great delight in you;
               <hr>
               <h3></h3>
             </div>
+
             <!-- ONE -->
             <!-- project title -->
-            <h5><em><a class="link" href="data_analysis.html">YOUTH CRIMES AND DATA ANALYSIS</a></em></h5>
+            <h5><em><a class="link" href="data_analysis.html">YOUTH CRIMES ANALYSIS</a></em></h5>
             <!-- project image -->
             <div class="image">
               <a href="data_analysis.html"><img src="image/data_0A.png" class="img-responsive img-circle"></a>
@@ -215,13 +178,27 @@ He will take great delight in you;
             <!-- description -->
             <p>Data analysis in the relationship between youth crimes, stress, depression, college scholastic ability tests in Korea. Full analysis post. <span id="more"><a href="https://medium.com/i-data/relationships-between-youth-crimes-stress-depression-and-college-scholastic-ability-tests-4ef78ca1a250">More @Medium>></a></span> </p>
             <!-- button -->
-            <div class="more button">
-
-            </div>
+            <div class="more button"></div>
             <!-- break -->
             <br>
             <hr>
             <!-- TWO -->
+            <!-- project title -->
+            <h5><em><a class="link" href="listening.html">I'M LISTENING</a></em></h5>
+            <!-- project image -->
+            <div class="image">
+              <a href="listening.html"><img src="image/listen_22.jpg" class="img-responsive img-circle"></a>
+              <!-- <a href=""><img src="image/carni_01.png" class="img-responsive img-circle"></a> -->
+            </div>
+            <!-- description -->
+            <p>A speech-to-text device that forms lasting relationships between volunteers and the homeless. Through visiting a homeless shelter for 8 weeks. <span id="more"><a href="listening.html">More>></a></span></p>
+            <!-- button -->
+            <div class="more button">
+            </div>
+            <!-- break -->
+            <br>
+            <hr>
+            <!-- THREE -->
             <!-- project title -->
             <h5><em><a class="link" href="carni.html">CARNISSEUR™ AFTERMATH</a></em></h5>
             <!-- project image -->
@@ -235,6 +212,43 @@ He will take great delight in you;
             <div class="more button">
             </div>
           </div>
+
+          <!--  NEWS STRIP 3-->
+          <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12">
+            <!-- category title -->
+            <div class="category title">
+              <h4>INSTALLATION/FABRICATION</h4>
+              <hr>
+              <h3></h3>
+            </div>
+            <!-- TWO -->
+            <!-- project title -->
+            <h5><em><a class="link" href="soundscape.html">SOUNDSCAPE TOY</a></em></h5>
+            <!-- project image -->
+            <div class="image">
+              <a href="soundscape.html"><img src="image/sound_00.jpg" class="img-responsive img-circle"></a>
+            </div>
+            <!-- project description -->
+            <p>An educational toy, that creates music through the landscapes you create with it. Each box side is a switch that triggers different musical cues. <span id="more"><a href="soundscape.html">More>></a></span></p>
+            <div class="more button"></div>
+            <!-- break -->
+            <br>
+            <hr>
+            <!-- ONE -->
+            <!-- project title -->
+            <h5><em><a class="link" href="divine.html">MEDIA ART ON THE DIVINE</a></em></h5>
+            <!-- project image -->
+            <div class="image">
+              <a href="divine.html"><img src="image/mapp_00.jpg" class="img-responsive img-circle"></a>
+            </div>
+            <!-- project description -->
+            <p>Projection Mapping on a Religious Object; re-creating the death on cross and overlaying study sketches of the object. <span id="more"><a href="divine.html">More>></a></span></p>
+            <div class="more button"></div>
+
+
+
+          </div> <!-- END OF NEWS STRIP 3--->
+
 
           <!--  NEWS STRIP 4 -->
           <div class="col-sm-3 hidden-md col-lg-3 col-xs-12">
@@ -253,15 +267,28 @@ He will take great delight in you;
               <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
             </div>
             <!-- description -->
-            <p>Collection of video uploads in coding/motion graphics /tests.<span id="more"><a href="videolab.html"> More>></a></span></p>
+            <p>Collection of video uploads in coding and physical computing experiment tests, motion graphics, and media design. <span id="more"><a href="videolab.html"> More>></a></span></p>
             <!-- button -->
+            <div class="more button"></div>
+            <!-- break -->
+            <br>
+            <hr>
+            <!-- TWO -->
+            <!-- project title -->
+            <h5><em><a class="link" href="typo.html">TYPOGRAPHY</a></em></h5>
+            <!-- project image -->
+            <div class="image">
+              <a href="typo.html"><img src="image/typo_00.jpg" class="img-responsive img-circle"></a>
+            </div>
+            <!-- project description -->
+            <p>Personal typography projects over the years for different media platforms. Branding, Books, Posters, Slides. <br><span id="more"><a href="typo.html">More>></a></span></p>
             <div class="more button">
 
             </div>
             <!-- break -->
             <br>
             <hr>
-            <!-- TWO -->
+            <!-- THREE -->
             <!-- project title -->
             <h5><em><a class="link" href="carni.html">SKETCHES</a></em></h5>
             <!-- project image -->
