--- a/videolab.html
+++ b/videolab.html
@@ -104,8 +104,8 @@
             2011-</p>
 
             <div style="text-align: center;">
-              <a href="carni.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
-              <a href="sketches.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
+              <a href="divine.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="typo.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
           </div>
 
@@ -119,7 +119,7 @@
             </div>
             <!-- ONE -->
             <!-- project description -->
-            <p>Collection of video uploads in coding/motion graphics. More at <span id="more"><a href="http://vimeo.com/crzikrn">vimeo.com/crzikrn</a></span>.</p>
+            <p>Collection of video uploads in coding and physical computing experiment tests, motion graphics, and media design. More at <span id="more"><a href="http://vimeo.com/crzikrn">vimeo.com/crzikrn</a></span>.</p>
 
             <hr>
             <!-- project image -->
