--- a/archi.html
+++ b/archi.html
@@ -105,7 +105,7 @@
 
             <div style="text-align: center;">
               <a href="hamlet.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
-              <a href="digi.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
+              <a href="data_analysis.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
 
           </div>
