--- a/digi.html
+++ b/digi.html
@@ -106,8 +106,8 @@
             2013</p>
 
             <div style="text-align: center;">
-              <a href="archi.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
-              <a href="typo.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
+              <a href="index.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="hamlet.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
 
           </div>
@@ -145,7 +145,9 @@
               <div class="col-md-6">
                 <a href="image/dian_02.png" data-lightbox="dian-box">
                 <img src="image/dian_02.png" class="img-responsive"></a>
-                <p><p>
+                <a href="image/dian_04.png" data-lightbox="dian-box">
+                <img src="image/dian_04.png" class="img-responsive"></a>
+
               </div>
 
 
