--- a/hamlet.html
+++ b/hamlet.html
@@ -123,7 +123,7 @@
             2014</p>
 
             <div style="text-align: center;">
-              <a href="index.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="digi.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
               <a href="archi.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
 
