--- a/typo.html
+++ b/typo.html
@@ -86,7 +86,7 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-12">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>MEDIA DESIGN <a href="index.html"><</a> </h4>
+              <h4>MULTIMEDIA <a href="index.html"><</a> </h4>
               <hr>
               <h3></h3>
             </div>
@@ -106,8 +106,8 @@
             2010-2015</p>
 
             <div style="text-align: center;">
-              <a href="digi.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
-              <a href="divine.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
+              <a href="videolab.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="sketches.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
 
           </div>
