--- a/typo.html
+++ b/typo.html
@@ -127,6 +127,7 @@
             <hr>
             <!-- project image -->
             <div class="image">
+
               <div class="col-md-6">
                 <h4>Name Branding/ Logo </h4>
                 <hr>
@@ -140,7 +141,8 @@
               <div class="col-md-6">
                 <h4>Article Page Design</h4>
                 <hr>
-                <a href="image/typo_03.jpg" data-lightbox="typo-box" data-title="Article Design"><img src="image/typo_03.jpg" class="img-responsive">
+                <a href="image/typo_03.jpg" data-lightbox="typo-box" data-title="Article Design">
+                  <img src="image/typo_03.jpg" class="img-responsive">
                 </a>
                 <h4>Slides for teaching at Mongolia</h4>
                 <hr><a href="image/typo_04.jpg" data-lightbox="typo-box" data-title="Slides">
@@ -148,7 +150,52 @@
                 <p></p>
               </div>
 
+              <!-- lower part -->
+              <div class="col-md-4">
+                <h4>Typography Poster</h4>
+                <hr>
+                <a href="image/typo_05.png" data-lightbox="typo-box" data-title="Name Branding/Logo">
+                  <img src="image/typo_05.png" class="img-responsive"></a>
+                <hr>
+                <a href="image/typo_06.jpg" data-lightbox="typo-box" data-title="Typography Justice">
+                  <img src="image/typo_06.jpg" class="img-responsive"></a>
+                <hr>
+                <a href="image/typo_10.jpg" data-lightbox="typo-box" data-title="Typography Justice">
+                  <img src="image/typo_10.jpg" class="img-responsive"></a>
+              </div>
+              <div class="col-md-4">
+                <h4>App Icon Design</h4>
+                <hr>
+                <a href="image/typo_07.jpg" data-lightbox="typo-box" data-title="Article Design">
+                  <img src="image/typo_07.jpg" class="img-responsive">
+                </a>
+                <hr><a href="image/typo_08.jpg" data-lightbox="typo-box" data-title="Slides">
+                <img src="image/typo_08.jpg" class="img-responsive"></a>
+                <h4>Social Media Post Design</h4>
+                <a href="image/typo_14.jpg" data-lightbox="typo-box" data-title="Name Branding/Logo">
+                  <img src="image/typo_14.jpg" class="img-responsive"></a>
+                <a href="image/typo_15.jpg" data-lightbox="typo-box" data-title="Name Branding/Logo">
+                  <img src="image/typo_15.jpg" class="img-responsive"></a>
+                <a href="image/typo_16.jpg" data-lightbox="typo-box" data-title="Name Branding/Logo">
+                <img src="image/typo_16.jpg" class="img-responsive"></a>
+              </div>
 
+
+              <div class="col-md-4">
+                <h4>Data Visualization</h4>
+                <hr>
+                <a href="image/typo_11.png" data-lightbox="typo-box" data-title="Name Branding/Logo">
+                  <img src="image/typo_11.png" class="img-responsive"></a>
+                <hr>
+                <a href="image/typo_12.png" data-lightbox="typo-box" data-title="Name Branding/Logo">
+                  <img src="image/typo_12.png" class="img-responsive"></a>
+              </div>
+              <div class="col-md-4">
+                <h4>Article Layout Design </h4>
+                <hr>
+                <a href="image/typo_09.jpg" data-lightbox="typo-box" data-title="Name Branding/Logo">
+                  <img src="image/typo_09.jpg" class="img-responsive"></a>
+              </div>
             </div>
             <!-- project description -->
 
