--- a/about.html
+++ b/about.html
@@ -129,7 +129,9 @@
             <!-- project image -->
             <div class="image"></div>
             <!-- project description -->
-            <p>I recently graduated as a master's candidate at ITP, NYU. My passions are closely tied with computational media effects on society, education and religion. I love to translate perspectives to the users language; to move them and lit their dormant passions. I consider myself a digital media designer; detail-oriented visual designer and storyteller of raw human interactions. I am passionate to experiment with interactive platforms to communicate perspectives and culture.
+            <p>I'm a graphic-media enthusiast attached to experiment with visual communication problems with technology. From building brand identity to researhcing social perception of products.
+            <br><br>
+            As an alumni at ITP, NYU. My passions are closely tied with computational media effects on society, education and religion. I love to translate perspectives to the users language; to move them and lit their dormant passions. I consider myself a digital media designer; detail-oriented visual designer and storyteller of raw human interactions. I am passionate to experiment with interactive platforms to communicate perspectives and culture.
             <br><br>
             On the side, I love programming languages and vector designs, and especially love to teach students. I have recently taught at Mongolia at Huree University in the Multimedia department. And am looking forward for more teaching opportunities in the future.</p>
             <div class="more button">
@@ -138,9 +140,24 @@
             <!-- break -->
             <br>
             <hr>
+            <div>
+            <h5><em><a class="link" href="">SKILLS</a></em></h5>
+            <p> I am a <strong> creative coder </strong> with background in <strong>media design, technology & architecture</strong>.
+            <br><br>
 
+            Over the years I have built expertise in <strong> design consulting in visual communications, design research with data,
+            building brand identity, systems design thinking, long-term template usage,
+            design communication dynamics.</strong>
+            <br><br>
+            All projects take in consideration of the clients need and the needs of the audience.
+            Consisting of well-developed conceptual phases.
+            <br><br>
+            I have a philosophy that every client have their marketing dependables and must be designed
+            to fit the market assets/resources at hand. And that room for experimentation comes with control and responsibility.
+            That creativity is the actionable idea that makes the smallest, but impactful change.
+            </p>
 
-
+          </div>
           </div>
 
         </div> <!--  END OF PORTFOLIO ROW-->
